* Remove `strict` flag from the `contains` methods and allow native/sandboxed object instances to match primitive values. [jddalton]

* Remove lingering Fuse.Array#clone dependency from the Fuse.Array#grep addition. [jddalton]

* Fix leaked variable `name` that caused TaskSpeed to error in WebKit based browsers. [Diego Perini]

* Refactor codebase to reduce file dependencies and allow more custom build variations. [jddalton]

* Cleanup codebase and optimize Element class. [jddalton, kangax]
    - Optimized Fuse.Util.$
    - Optimized insertableNodeTypes
    - Optimized Element.addMethods()
    - Fixed global var leaks in fusebox.js
    - Stoped wrapping `toString` and `valueOf` on sandboxed natives
    - Removed SafariMobile browser sniff from Feature('ELEMENT_SPECIFIC_EXTENSIONS')
    - Renamed Element._getContentFromAnonymousElement() to Element._getFragmentFromString()
    - Made Element.extend.refresh() private

* Rename Fuse.Browser to Fuse.Env to include other environments like Jaxer and Adobe AIR. [FuseJS LH #44] [jddalton, kangax]

* Reduce object property lookups by creating private variables and perform some code cleanup. [jddalton]

* Fix bug in Fuse.Object.isSameOrigin() that allowed urls ending with the same domain name to pass. [jddalton]

* Ensure Fuse.Object.toQueryString() only enumerates over an object's own direct properties. [Prototype LH #126] [jddalton, kitsg, Peter Gyongyosi]

* unit test: Add option to dynamically set the Fuse.debug flag in the test template. [jddalton]

* Fuse.debug flag set based on query string parameters in script tag [jddalton, Thomas Fuchs, Mark Caudill]

* Namespace Fuse.Exception added to use Firebug or to throw an exception via the Fuse.debug flag. [FuseJS LH #52] [jddalton, Mark Caudill]

* Rethrow errors when `onException` callbacks are not provided for Fuse.Ajax.Request instances. [Prototype LH #634] [jddalton, Spezi]
