@@ -2,7 +2,7 @@
   "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<title>FuseJS: Console</title>
+<title>FuseJS: Interpreter</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <style type="text/css">
   body {
@@ -10,30 +10,30 @@
     padding: 0;
   }
 
-  .console {
+  .interpreter {
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 50px;
   }
 
-  .console td {
+  .interpreter td {
     padding: 5px;
     font-family: monospace;
     font-size: 14px;
   }
 
-  .console tr.input td {
+  .interpreter tr.input td {
     background-color: #eee;
     font-weight: bold;
   }
 
-  .console tr.error td,
-  .console tr.output td {
+  .interpreter tr.error td,
+  .interpreter tr.output td {
     color: #333;
     border-bottom: 1px solid #ccc;
   }
 
-  .console tr.error td {
+  .interpreter tr.error td {
     color: #f00;
   }
 
@@ -52,14 +52,14 @@
 <script type="text/javascript">
   var $ = Fuse.Util.$;
 
-  Fuse.addNS('Console', {
+  Fuse.addNS('Interpreter', {
     'initialize': function(element, form, input) {
       this.element = $(element);
       this.form    = $(form);
       this.input   = $(input);
       this.context = Fuse.Function.bind(window.eval, window);
       this.registerCallbacks();
-      document.title = 'FuseJS: Console (' + Fuse.Version + ')';
+      document.title = 'FuseJS: Interpreter (' + Fuse.Version + ')';
       Field.activate(this.input);
     },
 
@@ -99,8 +99,8 @@
 </script>
 </head>
 <body>
-  <table class="console">
-    <tbody id="console">
+  <table class="interpreter">
+    <tbody id="interpreter">
       <tr><td></td></tr>
     </tbody>
   </table>
@@ -109,7 +109,7 @@
     <input type="submit" value="Evaluate">
   </form>
   <script type="text/javascript">
-    window.console = new Fuse.Console('console', 'input-form', 'input');
+    window.interpreter = new Fuse.Interpreter('interpreter', 'input-form', 'input');
   </script>
 </body>
 </html>
